plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.7'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'com.consultores.optiplant'
version = '0.0.1-SNAPSHOT'
description = 'aptiplant-back'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Web & REST
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Data & Persistencia
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
    runtimeOnly 'org.postgresql:postgresql'

    // Seguridad
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Validación (Bean Validation / @Valid)
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // JWT (JJWT 0.12.x)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Documentación API (Swagger / OpenAPI 3)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Dev tools (hot reload)
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'com.h2database:h2'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

def jacocoExcludes = [
    '**/controller/**',
    '**/config/**',
    '**/security/**',
    '**/exception/**',
    '**/entity/**',
    '**/dto/**',
    '**/repository/**',
    '**/*Application*',
    '**/enums/**',
]

jacocoTestReport {
    dependsOn test
    classDirectories.setFrom(files(classDirectories.files.collect {
        fileTree(dir: it, excludes: jacocoExcludes)
    }))
    reports {
        xml.required = true
        html.required = true
    }
}

jacocoTestCoverageVerification {
    classDirectories.setFrom(files(classDirectories.files.collect {
        fileTree(dir: it, excludes: jacocoExcludes)
    }))
    violationRules {
        rule {
            limit {
                minimum = 0.60
            }
        }
    }
}
